test/Harper/Tests/Bad/issue3_divZero.har
main = 42 / 0;